--- a/views/base.pug
+++ b/views/base.pug
@@ -1,17 +1,21 @@
 doctype html
 html
   head
-    title Natours | #{tour}
+    meta(charset='UTF-8')
+    meta(name='viewport' content='width=device-width, initial-scale=1.0')
     link(rel='stylesheet' href='css/style.css')
     link(rel='shortcut icon' type='image/png' href='img/favicon.png')
+    link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,300i,700')
+    title Natours | #{title}
 
   body
-    h1= tour
-    h2= user.toUpperCase()
-    //- h1 The Park Camper
+    // HEADER
+    include _header
 
-    - const x = 9
-    h2= 2 * x
+    // CONTENT
+    main.main
+      block content
+        h1 This is a place holder heading
 
-    p This is just some text
-
+    // FOOTER
+    include _footer
