Added overview page using pug

--- a/views/base.pug
+++ b/views/base.pug
@@ -3,8 +3,8 @@ html
   head
     meta(charset='UTF-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
-    link(rel='stylesheet' href='css/style.css')
-    link(rel='shortcut icon' type='image/png' href='img/favicon.png')
+    link(rel='stylesheet' href='/css/style.css')
+    link(rel='shortcut icon' type='image/png' href='/img/favicon.png')
     link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,300i,700')
     title Natours | #{title}
 
@@ -13,9 +13,8 @@ html
     include _header
 
     // CONTENT
-    main.main
-      block content
-        h1 This is a place holder heading
+    block content
+      h1 This is a place holder heading
 
     // FOOTER
     include _footer
