Frontend bundling with Parcel

--- a/views/tour.pug
+++ b/views/tour.pug
@@ -3,7 +3,7 @@ include _reviewCard
 
 //- to load js file in front end, inject new head into base.pug head block
 block append head
-  script(defer, src='/js/mapbox.js')
+  //- script(defer, src='/js/mapbox.js')
   script(src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js')
   link(href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet')
 
