--- a/views/login.pug
+++ b/views/login.pug
@@ -1,8 +1,8 @@
 extends base
 
 block append head
-  script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js')
-  script(defer src='/js/login.js')
+  //- script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js')
+  //- script(defer src='/js/login.js')
 
 block content
   main.main
