--- a/views/account.pug
+++ b/views/account.pug
@@ -29,7 +29,12 @@ block content
       .user-view__content
         .user-view__form-container
           h2.heading-secondary.ma-bt-md Your account settings
-          form.form.form-user-data(action='submit-user-data' method='POST')
+
+          //- WITHOUT API
+          //- form.form.form-user-data(action='submit-user-data' method='POST')
+
+          //- WITH API
+          form.form.form-user-data
             .form__group
               label.form__label(for='name') Name
               input#name.form__input(type='text', value=`${user.name}`, required, name='name')
@@ -45,7 +50,7 @@ block content
         .line &nbsp;
         .user-view__form-container
           h2.heading-secondary.ma-bt-md Password change
-          form.form.form-user-settings
+          form.form.form-user-password
             .form__group
               label.form__label(for='password-current') Current password
               input#password-current.form__input(type='password', placeholder='••••••••', required, minlength='8')
@@ -56,4 +61,4 @@ block content
               label.form__label(for='password-confirm') Confirm password
               input#password-confirm.form__input(type='password', placeholder='••••••••', required, minlength='8')
             .form__group.right
-              button.btn.btn--small.btn--green Save password
+              button.btn.btn--small.btn--green.btn--save-password Save password
